--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-logging.level.org.springframework.cloud.gateway=TRACE
 management.endpoints.web.exposure.include=*
+logging.file.name=target/gateway
